--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <!-------------------------------------------------------------------------------------------------------------------------------->
 
 
-
+  <img src="assets/img/dmark.png" alt="">
 
 
 <!--ACA ESTARA EL SECTION 3-->
