--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
       <div class="row">
         <div class="col-6">
-        <img src="assets/img/dmark.png" alt="">
+
           <p class="parrafo1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
         </div>
@@ -180,7 +180,7 @@
 <!-------------------------------------------------------------------------------------------------------------------------------->
 
 
-  <img src="assets/img/dmark.png" alt="">
+
 
 
 <!--ACA ESTARA EL SECTION 3-->
@@ -283,13 +283,13 @@
       </div>
 
     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 moveiconfoot">
-      <a href="https://www.facebook.com/JJFELJ" target="_blank" data-toggle="popover" data-placement="top" data-content="Facebook"><i class="icon1 fab fa-facebook-square fa-3x mr-3 text-white"></i></a>
+      <a href="https://www.facebook.com/JJFELJ" target="_blank" data-toggle="popover" data-trigger="hover" data-placement="top" data-content="Facebook"><i class="icon1 fab fa-facebook-square fa-3x mr-3 text-white"></i></a>
 
-      <a href="https://www.instagram.com/" target="_blank" data-toggle="popover" data-placement="top" data-content="Instagram"><i class="fab fa-instagram fa-3x mr-3 text-white"></i></a>
+      <a href="https://www.instagram.com/" target="_blank" data-toggle="popover" data-trigger="hover" data-placement="top" data-content="Instagram"><i class="fab fa-instagram fa-3x mr-3 text-white"></i></a>
 
-      <a href="https://twitter.com/" target="_blank" data-toggle="popover" data-placement="top" data-content="Twitter"><i class="fab fa-twitter-square fa-3x mr-3 text-white"></i></a>
+      <a href="https://twitter.com/" target="_blank" data-toggle="popover" data-trigger="hover" data-placement="top" data-content="Twitter"><i class="fab fa-twitter-square fa-3x mr-3 text-white"></i></a>
 
-      <a href="https://www.youtube.com/"target="_blank" data-toggle="popover" data-placement="top" data-content="Youtube"><i class="fab fa-youtube fa-3x text-white"></i></a>
+      <a href="https://www.youtube.com/"target="_blank" data-toggle="popover"  data-trigger="hover" data-placement="top" data-content="Youtube"><i class="fab fa-youtube fa-3x text-white"></i></a>
     </div>
   </div>
 </div>
